syntax = "proto3";

option csharp_namespace = "AnalyzeServiceGrpc";

package analyzer;

service Analyzer {
	rpc UploadFile (stream AnalyzeFileRequest) returns (AnalyzeFileResponse);
}

message AnalyzeFileMetadata {
	string file_name = 1;
}

message AnalyzeFileRequest {
	AnalyzeFileMetadata metadata = 1;
	bytes data = 2;
}

message AnalyzeFileResponse {
	bool is_malicious = 1;
}